--- a/public/index.html
+++ b/public/index.html
@@ -42,8 +42,7 @@
     
     <script 
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=f0cd7cbc8bfab22a1dcbcf7c4cd4c341&libraries=services"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=f0cd7cbc8bfab22a1dcbcf7c4cd4c341&libraries=services,clusterer"
     ></script>
-
   </body>
 </html>
