--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=f0cd7cbc8bfab22a1dcbcf7c4cd4c341&libraries=services,clusterer"></script>
     <title>토지</title>
   </head>
   <body>
@@ -39,10 +40,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    
-    <script 
-      type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=f0cd7cbc8bfab22a1dcbcf7c4cd4c341&libraries=services,clusterer"
-    ></script>
   </body>
 </html>
